--- a/package.json
+++ b/package.json
@@ -10,17 +10,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.4",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.1.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~44.0.0",
+    "expo-file-system": "~13.1.4",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.6.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
+    "react-native-paper-form-builder": "^2.1.2",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-screens": "^3.13.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-native-dotenv": "^0.2.0",
     "typescript": "~4.3.5"
   },
   "private": true
