updated to include wyiswyg

--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "permissions": [
         "WRITE_EXTERNAL_STORAGE",
         "READ_EXTERNAL_STORAGE"
-      ]
+      ],
+      "package": "inscriber.jordanohara.dev"
     },
     "web": {
       "favicon": "./src/assets/images/favicon.png"
