--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     "expo-file-system": "~13.1.4",
     "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "^9.6.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^7.31.1",
     "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-cn-quill": "^0.7.15",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.2",
     "react-native-paper-form-builder": "^2.1.2",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.18.2",
+    "remove": "^0.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
